--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,9 @@
 }
 
 .logo1{
-  width: 67%;
-  margin-bottom: 85%;
-  margin-left: 20%;
+  width: 60%;
+  margin-bottom: 29%;
+  margin-left: 21%;
 }
 
 .App-logo {
@@ -61,12 +61,12 @@
   margin-left: 23px;
 }
 .wrapparent{
-  margin-top: -116px;
+  margin-top: -16%;
 }
 
 .landing1{
-    margin-top: -25px;
-    width: 373px;
+  margin-top: 23px;
+  width: 373px;
 }
 
 .landing{
@@ -74,7 +74,7 @@
 }
 
 .regresa12{
-  margin-top: -49px;
+  margin-top: -2px;
   margin-left: 36px;
 }
 
@@ -84,7 +84,11 @@
   margin-right: -62px;
 }
 .regresa12w{
-  margin-top: -136px;
+
+  margin-left: 36px;
+}
+
+.regresa122w{
   margin-left: 36px;
 }
 
@@ -101,8 +105,41 @@
 }
 
 .beb{
-    margin-top: -2%;
+    margin-top: 0%;
     width: 90%;
+}
+
+.homer{
+  width: 4%;
+
+
+}
+
+.opciones123{
+  margin-top: -138%;
+}
+
+.volver{
+  width: 1%;
+  font-size: 31px;
+  margin-bottom: 1px;
+}
+
+.volver1{
+  font-size: 31px;
+  margin-right: 66%;
+  margin-top: -35px;
+}
+
+.volver13{
+  font-size: 31px;
+  margin-bottom: 25px;
+  margin-left: -292px;
+}
+
+.regrp{
+  margin-top: -13%;
+  margin-left: -64%;
 }
 
 .App-link {
@@ -119,18 +156,18 @@
 }
 
 .opciones{
-  padding: 0px 86px;
+  padding: 0px 97px;
   background: white;
-  margin-top: -47%;
+  margin-top: -15%;
   
 }
 .bebidas{
-    margin-top: -26%;
+    margin-top: 10%;
     width: 90%;
 }
 
 .flex{
-  margin-top: -48.9%;
+  margin-top: -23%;
   margin-left: 1%;
 }
 
@@ -169,6 +206,7 @@
 .wi{
   width: 51%;
   height: 0%;
+  margin-top: -6%;
 }
 .vi{
   width: 142px;
@@ -177,11 +215,11 @@
 
 .blanc{
   height: 145px;
-  margin-top: -85px;
+  margin-top: -115px;
 }
 .blanc1{
   height: 1%;
-  margin-top: -143px;
+  margin-top: -174px;
 }
 
 .lic{
@@ -193,7 +231,7 @@
 .on{
   width: 135px;
   height: 145px;
-  margin-top: -44px;
+  margin-top: -69px;
 }
 
 .cc{
@@ -243,6 +281,10 @@ div{
     font-size: 0px !important;
     background: transparent !important;
     cursor: pointer !important;
+}
+
+.BrainhubCarousel__track .BrainhubCarousel__track--transition .BrainhubCarousel__track--draggable{
+  transition-duration: 250ms, 250ms !important;
 }
 
 .bm-burger-button > button {
