--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
   margin-left: 23px;
 }
 .wrapparent{
-  margin-top: -16%;
+  margin-top: -1%
 }
 
 .landing1{
@@ -116,7 +116,7 @@
 }
 
 .opciones123{
-  margin-top: -138%;
+  margin-top: -96%;
 }
 
 .volver{
@@ -133,7 +133,7 @@
 
 .volver13{
   font-size: 31px;
-  margin-bottom: 25px;
+  margin-bottom: 66px;
   margin-left: -292px;
 }
 
